examples/datalog/14_aggregations/42_multi_level_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_multi_group
Knowledge graph 'test_multi_group' created.
Switched to knowledge graph: test_multi_group
> .kg use test_multi_group
Switched to knowledge graph: test_multi_group
> +orders[(1, "Alice", "Widget", 100), (2, "Alice", "Gadget", 150), (3, "Bob", "Widget", 200)].
Inserted 3 fact(s) into 'orders'.
> +by_cust_prod(Cust, Prod, <SUM:Amt>) :- orders(_, Cust, Prod, Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
